# ec-smart-contract-near

./: .gitignore  RUNME.md  package.json
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/src/: lib.rs
shop/: Cargo.toml  deploy.sh
shop/neardev/: dev-account  dev-account.env
shop/src/: lib.rs
